  (2007-08-12, HA)
  * added win32-msvc.net project file for testoperators.cpp
  * bugfix: obey for option DUMA_NO_LEAKDETECTION:
    check for this option before calling any non-existing operators
    with leak parameters
  * enhanced comments in Makefile for DUMA_SO_* and DUMA_LIB_* options
  * changes in Makefile to build dynamic library on osx
  (2007-08-14, HA)

2.5.5
  * support for Solaris (Solaris 10 with the GNU toolchain from Companion CD)
  * fix for solaris: strerror() calls calloc() leading to recursion
    added preprocessor option DUMA_NO_STRERROR
  * internal redesign:
    collected several global static variables to one structure
    and several global non static variables to other structure
    each with prepended and appended protection space
  (2007-08-11, HA)

2.5.4
  * support for win32 mingw when calling make with OSTYPE=msys
      call "mingw32-make OSTYPE=msys" from Windows command prompt
      having added the PATH for MINGW/bin
  (2007-07-28, HA)
  * echo single dot '.' for windows command shell
  (2007-07-31, HA)

2.5.3
  * added simple Makefiles for examples in subdir example_makes/ex*/
  * modified Makefile to avoid build of shared libs/executables specific to OS
  * dumapp.h now keeps C macro definitions
  * support for max osx when calling make with OS=osx
  * support for win32 cygwin when calling make with OSTYPE=cygwin
  (2007-07-14, HA)
  * bugfix in createconf.c for Win32 but non Visual C++
  * got cygwin to work:
      switched off stacktrace (before trying to integrate in Makefile)
      caddr_t and u_int were already defined
      use signals as on Linux/Unix in dumatest.c
      updated Makefile
  (2007-07-13, HA)

2.5.2
  * minor corrections
  * added preprocessor option "DUMA_SEMAPHORES" to select pthreads
      locking mechanism: semaphores or mutexes
  * removed automatically generated visual c++ file detoursexample1.ncb
      from CVS and archives
  (2007-07-12, HA)

2.5.1